--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
+        "jquery": "^3.6.0",
+        "jquery-ui": "^1.12.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.5",
-        "vue-template-compiler": "^2.6.12"
+        "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "select2": "^4.1.0-rc.0",
+        "sweetalert2": "^10.16.7"
     }
 }
